--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.8",
+    "@mui/material": "^6.1.7",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@turf/turf": "^7.1.0",
