--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@turf/turf": "^7.1.0",
     "axios": "^1.7.7",
+    "framer-motion": "^11.11.15",
     "geolib": "^3.3.4",
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
