--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,8 @@
     "start": "vite"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@headlessui/react": "^2.1.8",
     "@mui/material": "^6.1.7",
     "@radix-ui/react-popover": "^1.1.2",
