--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@turf/turf": "^7.1.0",
     "axios": "^1.7.7",
+    "framer-motion": "^11.11.15",
     "geolib": "^3.3.4",
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
@@ -25,13 +26,17 @@
     "openrouteservice-js": "^0.4.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-map-gl": "^7.1.7",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.0.2",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
+    "recharts": "^2.13.3",
+    "vercel": "^39.0.0",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
