--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^6.1.7",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.0",
+    "@shadcn/ui": "^0.0.4",
     "@turf/turf": "^7.1.0",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.15",
