--- a/app/package.json
+++ b/app/package.json
@@ -11,20 +11,21 @@
     "start": "vite"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@headlessui/react": "^2.1.8",
-    "@mui/material": "^6.1.7",
+    "@mui/material": "^6.1.9",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@shadcn/ui": "^0.0.4",
     "@turf/turf": "^7.1.0",
-    "axios": "^1.7.7",
-    "framer-motion": "^11.11.15",
+    "axios": "^1.7.8",
+    "framer-motion": "^11.12.0",
     "geolib": "^3.3.4",
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.446.0",
     "mapbox-gl": "^3.5.2",
     "openrouteservice-js": "^0.4.1",
@@ -38,10 +39,11 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.0.2",
     "react-spinners": "^0.14.1",
-    "react-toastify": "^10.0.5",
+    "react-toastify": "^10.0.6",
     "recharts": "^2.13.3",
+    "typeface-roboto": "^1.1.13",
     "vercel": "^39.0.0",
-    "zustand": "^5.0.0"
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
