--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.7",
     "@radix-ui/react-alert-dialog": "^1.1.2",
@@ -26,4 +27,3 @@
     "zustand": "^5.0.0"
   }
 }
-
