--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "@fontsource/roboto": "^5.1.0",
     "@headlessui/react": "^2.1.8",
     "@mui/material": "^6.1.9",
     "@radix-ui/react-popover": "^1.1.2",
@@ -23,6 +24,7 @@
     "framer-motion": "^11.12.0",
     "geolib": "^3.3.4",
     "html2canvas": "^1.4.1",
+    "i": "^0.3.7",
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.2",
     "leaflet": "^1.9.4",
