--- a/app/package.json
+++ b/app/package.json
@@ -35,6 +35,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-map-gl": "^7.1.7",
