--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,7 @@
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.2",
     "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.446.0",
     "mapbox-gl": "^3.5.2",
     "openrouteservice-js": "^0.4.1",
