--- a/app/package.json
+++ b/app/package.json
@@ -46,6 +46,7 @@
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
     "recharts": "^2.13.3",
+    "socket.io-client": "^4.8.1",
     "typeface-roboto": "^1.1.13",
     "vercel": "^39.0.0",
     "zustand": "^5.0.1"
