--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "recharts": "^2.13.0",
     "shadcn-ui": "^0.9.2",
     "zustand": "^5.0.0"
+  },
+  "scripts": {
+    "dev": "nodemon server.js"
   }
 }
