--- a/app/package.json
+++ b/app/package.json
@@ -11,11 +11,12 @@
     "start": "vite"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.5",
-    "@emotion/styled": "^11.13.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.1.0",
     "@headlessui/react": "^2.1.8",
-    "@mui/material": "^6.1.9",
+    "@mui/material": "^6.4.0",
+    "@mui/styled-engine-sc": "^6.4.0",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@shadcn/ui": "^0.0.4",
@@ -46,8 +47,9 @@
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
     "recharts": "^2.13.3",
+    "styled-components": "^6.1.14",
     "typeface-roboto": "^1.1.13",
-    "vercel": "^39.0.0",
+    "vercel": "^32.3.0",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
@@ -55,6 +57,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.19",
+    "daisyui": "^4.12.23",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
