--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,7 @@
     "i": "^0.3.7",
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "jwt-decode": "^3.1.2",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
