--- a/app/package.json
+++ b/app/package.json
@@ -15,10 +15,11 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.1.0",
     "@headlessui/react": "^1.7.18",
+    "@mui/icons-material": "^5.15.7",
     "@mui/material": "^5.15.7",
-    "@mui/styled-engine-sc": "^5.14.12",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@shadcn/ui": "^0.0.4",
     "@turf/turf": "^7.1.0",
     "axios": "^1.6.7",
@@ -67,5 +68,10 @@
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.12"
+  },
+  "resolutions": {
+    "@types/react": "^18.2.48",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
