--- a/app/package.json
+++ b/app/package.json
@@ -70,8 +70,9 @@
     "vite": "^5.0.12"
   },
   "resolutions": {
-    "@types/react": "^18.2.48",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  }
+  "@types/react": "18.2.48",
+  "react": "18.2.0",
+  "react-dom": "18.2.0",
+  "@types/react-dom": "18.2.18"
+}
 }
