--- a/app/package.json
+++ b/app/package.json
@@ -11,13 +11,13 @@
     "start": "vite"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.1.0",
     "@headlessui/react": "^1.7.18",
     "@mui/icons-material": "^5.15.7",
-    "@mui/material": "^5.16.14",
-    "@mui/styled-engine-sc": "^6.4.2",
+    "@mui/material": "^5.15.7",
+    "@mui/styled-engine-sc": "^6.0.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-scroll-area": "^1.0.5",
@@ -51,7 +51,7 @@
     "react-toastify": "^10.0.4",
     "recharts": "^2.10.4",
     "socket.io-client": "^4.7.4",
-    "styled-components": "^5.3.11",
+    "styled-components": "^6.1.8",
     "typeface-roboto": "^1.1.13",
     "vercel": "^32.3.0",
     "zustand": "^4.5.0"
@@ -74,6 +74,11 @@
     "@types/react": "18.2.48",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@types/react-dom": "18.2.18"
+    "@types/react-dom": "18.2.18",
+    "@emotion/react": "11.11.3",
+    "@emotion/styled": "11.11.0",
+    "@mui/material": "5.15.7",
+    "@mui/icons-material": "5.15.7",
+    "styled-components": "6.1.8"
   }
 }
