--- a/app/package.json
+++ b/app/package.json
@@ -11,74 +11,67 @@
     "start": "vite"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@fontsource/roboto": "^5.1.0",
-    "@headlessui/react": "^1.7.18",
-    "@mui/icons-material": "^5.15.7",
-    "@mui/material": "^5.15.7",
-    "@mui/styled-engine-sc": "^6.0.0",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-scroll-area": "^1.0.5",
-    "@shadcn/ui": "^0.0.4",
-    "@turf/turf": "^7.1.0",
-    "axios": "^1.6.7",
-    "framer-motion": "^11.0.3",
-    "geolib": "^3.3.4",
-    "html2canvas": "^1.4.1",
-    "i": "^0.3.7",
-    "js-cookie": "^3.0.5",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.8.1",
-    "jwt-decode": "^3.1.2",
-    "leaflet": "^1.9.4",
-    "lodash": "^4.17.21",
-    "lucide-react": "^0.330.0",
-    "mapbox-gl": "^3.1.2",
-    "openrouteservice-js": "^0.4.0",
-    "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-datepicker": "^4.25.0",
-    "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.0.1",
-    "react-leaflet": "^4.2.1",
-    "react-map-gl": "^7.1.7",
-    "react-modal": "^3.16.1",
-    "react-router-dom": "^6.21.3",
-    "react-spinners": "^0.13.8",
-    "react-toastify": "^10.0.4",
-    "recharts": "^2.10.4",
-    "socket.io-client": "^4.7.4",
-    "styled-components": "^6.1.8",
-    "typeface-roboto": "^1.1.13",
-    "vercel": "^32.3.0",
-    "zustand": "^4.5.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.17",
-    "daisyui": "^4.6.1",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1",
-    "vite": "^5.0.12"
-  },
-  "resolutions": {
-    "@types/react": "18.2.48",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@types/react-dom": "18.2.18",
     "@emotion/react": "11.11.3",
     "@emotion/styled": "11.11.0",
-    "@mui/material": "5.15.7",
+    "@fontsource/roboto": "5.1.0",
+    "@headlessui/react": "1.7.18",
     "@mui/icons-material": "5.15.7",
-    "styled-components": "6.1.8"
+    "@mui/material": "5.15.7",
+    "@mui/styled-engine-sc": "6.0.0",
+    "@radix-ui/react-dialog": "1.0.5",
+    "@radix-ui/react-popover": "1.0.7",
+    "@radix-ui/react-scroll-area": "1.0.5",
+    "@shadcn/ui": "0.0.4",
+    "@turf/turf": "7.1.0",
+    "axios": "1.6.7",
+    "framer-motion": "11.0.3",
+    "geolib": "3.3.4",
+    "html2canvas": "1.4.1",
+    "i": "0.3.7",
+    "js-cookie": "3.0.5",
+    "jspdf": "2.5.1",
+    "jspdf-autotable": "3.8.1",
+    "jwt-decode": "3.1.2",
+    "leaflet": "1.9.4",
+    "lodash": "4.17.21",
+    "lucide-react": "0.330.0",
+    "mapbox-gl": "3.1.2",
+    "openrouteservice-js": "0.4.0",
+    "react": "18.2.0",
+    "react-chartjs-2": "5.2.0",
+    "react-datepicker": "4.25.0",
+    "react-dom": "18.2.0",
+    "react-hot-toast": "2.4.1",
+    "react-icons": "5.0.1",
+    "react-leaflet": "4.2.1",
+    "react-map-gl": "7.1.7",
+    "react-modal": "3.16.1",
+    "react-router-dom": "6.21.3",
+    "react-spinners": "0.13.8",
+    "react-toastify": "10.0.4",
+    "recharts": "2.10.4",
+    "socket.io-client": "4.7.4",
+    "styled-components": "6.1.8",
+    "typeface-roboto": "1.1.13",
+    "vercel": "32.3.0",
+    "zustand": "4.5.0"
+  },
+  "devDependencies": {
+    "@types/react": "18.2.48",
+    "@types/react-dom": "18.2.18",
+    "@vitejs/plugin-react": "4.2.1",
+    "autoprefixer": "10.4.17",
+    "daisyui": "4.6.1",
+    "eslint": "8.56.0",
+    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.5",
+    "postcss": "8.4.33",
+    "tailwindcss": "3.4.1",
+    "vite": "5.0.12"
+  },
+  "overrides": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
