--- a/app/package.json
+++ b/app/package.json
@@ -70,6 +70,12 @@
     "tailwindcss": "3.4.1",
     "vite": "5.0.12"
   },
+  "resolutions": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "@types/react": "18.2.48",
+    "@types/react-dom": "18.2.18"
+  },
   "overrides": {
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -90,11 +96,5 @@
       "react-dom": "18.2.0",
       "@types/react": "18.2.48"
     }
-  },
-  "peerDependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@types/react": "18.2.48",
-    "@types/react-dom": "18.2.18"
   }
 }
