--- a/app/package.json
+++ b/app/package.json
@@ -51,7 +51,7 @@
   "devDependencies": {
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
-    "@vitejs/plugin-react": "4.2.1",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "10.4.17",
     "daisyui": "^4.12.23",
     "eslint": "8.56.0",
@@ -60,6 +60,6 @@
     "eslint-plugin-react-refresh": "0.4.5",
     "postcss": "8.4.33",
     "tailwindcss": "3.4.1",
-    "vite": "^5.0.12"
+    "vite": "^5.4.14"
   }
 }
