--- a/app/vercel.json
+++ b/app/vercel.json
@@ -1,6 +1,9 @@
 {
+    "buildCommand": "npm run build",
+    "installCommand": "npm install",
+    "framework": "vite",
     "rewrites": [
       { "source": "/(.*)", "destination": "/" }
     ]
-  }
+}
   
