--- a/app/vercel.json
+++ b/app/vercel.json
@@ -1,9 +1,19 @@
 {
-    "buildCommand": "npm run build",
-    "installCommand": "npm install",
-    "framework": "vite",
-    "rewrites": [
-      { "source": "/(.*)", "destination": "/" }
+    "version": 2,
+    "builds": [
+        {
+            "src": "package.json",
+            "use": "@vercel/static-build",
+            "config": {
+                "distDir": "dist"
+            }
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/"
+        }
     ]
 }
   
