--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "5.15.7",
     "@mui/styled-engine-sc": "6.0.0",
     "@turf/turf": "7.1.0",
+    "@vitejs/plugin-react": "4.2.1",
     "axios": "1.6.7",
     "framer-motion": "11.0.3",
     "geolib": "3.3.4",
@@ -47,12 +48,12 @@
     "recharts": "2.10.4",
     "socket.io-client": "4.7.4",
     "styled-components": "6.1.8",
+    "vite": "5.0.0",
     "zustand": "4.5.0"
   },
   "devDependencies": {
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
-    "@vitejs/plugin-react": "4.2.1",
     "autoprefixer": "10.4.17",
     "daisyui": "4.12.23",
     "eslint": "8.56.0",
@@ -60,7 +61,6 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.5",
     "postcss": "8.4.33",
-    "tailwindcss": "3.4.1",
-    "vite": "5.0.0"
+    "tailwindcss": "3.4.1"
   }
 }
