--- a/app/package.json
+++ b/app/package.json
@@ -52,7 +52,8 @@
     "styled-components": "^6.1.14",
     "typeface-roboto": "^1.1.13",
     "vercel": "^32.3.0",
-    "zustand": "^5.0.1"
+    "zustand": "^5.0.1",
+    "vite": "^6.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -65,7 +66,6 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.6",
-    "vite": "^6.0.4"
+    "tailwindcss": "^3.4.6"
   }
 }
