--- a/app/package.json
+++ b/app/package.json
@@ -11,60 +11,61 @@
     "start": "vite"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.1.0",
-    "@headlessui/react": "^1.7.18",
-    "@mui/material": "^5.15.11",
+    "@headlessui/react": "^2.1.8",
+    "@mui/material": "^6.4.0",
+    "@mui/styled-engine-sc": "^6.4.0",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@shadcn/ui": "^0.0.4",
     "@turf/turf": "^7.1.0",
-    "axios": "^1.6.7",
-    "framer-motion": "^11.0.8",
+    "axios": "^1.7.8",
+    "framer-motion": "^11.12.0",
     "geolib": "^3.3.4",
     "html2canvas": "^1.4.1",
     "i": "^0.3.7",
     "js-cookie": "^3.0.5",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.8.2",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "jwt-decode": "^3.1.2",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.344.0",
-    "mapbox-gl": "^3.1.2",
+    "lucide-react": "^0.446.0",
+    "mapbox-gl": "^3.5.2",
     "openrouteservice-js": "^0.4.1",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
-    "react-datepicker": "^4.25.0",
-    "react-dom": "^18.2.0",
+    "react-datepicker": "^7.5.0",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.0.1",
+    "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-map-gl": "^7.1.7",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^6.22.2",
-    "react-spinners": "^0.13.8",
-    "react-toastify": "^10.0.4",
-    "recharts": "^2.12.1",
-    "socket.io-client": "^4.7.4",
-    "styled-components": "^5.3.11",
+    "react-router-dom": "^6.0.2",
+    "react-spinners": "^0.14.1",
+    "react-toastify": "^10.0.6",
+    "recharts": "^2.13.3",
+    "socket.io-client": "^4.8.1",
+    "styled-components": "^6.1.14",
     "typeface-roboto": "^1.1.13",
     "vercel": "^32.3.0",
-    "zustand": "^4.5.1"
+    "zustand": "^5.0.1",
+    "vite": "^6.0.4"
   },
   "devDependencies": {
-    "@types/react": "^18.2.58",
-    "@types/react-dom": "^18.2.19",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.17",
-    "daisyui": "^4.7.2",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "vite": "^5.1.4"
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.19",
+    "daisyui": "^4.12.23",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.6"
   }
 }
