--- a/app/vercel.json
+++ b/app/vercel.json
@@ -1,6 +1,14 @@
 {
     "rewrites": [
         { "source": "/(.*)", "destination": "/index.html" }
-    ]
+    ],
+    "builds": [
+        {
+            "src": "package.json",
+            "use": "@vercel/node"
+        }
+    ],
+    "buildCommand": "npm run build",
+    "outputDirectory": "dist"
 }
   
